# agentcore-public-stack

./: .gitignore  CDK_SYNTHESIS_TEST_RESULTS.md  CHANGELOG.md  CLAUDE.MD  CONTRIBUTING.md  FRONTEND_BUILD_TEST_RESULTS.md  README.md  RELEASE_NOTES.md  Test-WorkflowConfiguration.ps1  USER_COST_TRACKING_SPEC.md  WORKFLOW_CONFIGURATION_TEST_RESULTS.md  codeql-alerts.json  deploy.sh  manifest.json  setup.sh  start.sh  test-cdk-synthesis.sh  test-workflow-configuration.sh
.claude/: launch.json
.devcontainer/: Dockerfile  README.md
.github/: ACTIONS-REFERENCE.md  ARTIFACT_RETENTION.md  README-ACTIONS.md  copilot-instructions.md  dependabot.yml
backend/: ARCHITECTURE_CLEANUP_PROGRESS.md  Dockerfile.app-api  Dockerfile.inference-api  Dockerfile.rag-ingestion  JUSTIFIED_EXCEPTION_SUPPRESSIONS.md  MULTI_PROVIDER_GUIDE.md  PHASE2_EXCEPTION_HANDLING_SUMMARY.md  README.md  SHARED_ASSISTANTS_MODULE_SUMMARY.md  SHARED_MODELS_MODULE_SUMMARY.md  SHARED_SESSIONS_MODULE_VERIFICATION.md  pyproject.toml  pytest.ini  test_shared_assistants_comprehensive.py  test_shared_assistants_import.py  test_shared_files_import.py  test_shared_models_import.py  test_shared_sessions_import.py  test_shared_sessions_import_comprehensive.py
cdk/: README.md  cdk.json  package.json
devops-project/: CLAUDES_INSTRUCTIONS.md  CLAUDES_LESSONS_PHASE1.md  CLAUDES_LESSONS_PHASE2.md  CLAUDES_LESSONS_PHASE3.md  CLAUDES_LESSONS_PHASE4.md  PROMPT_TEMPLATE.md  (+6 more)
scripts/backup-data/: README.md  backup.py  manifest_schema.json  pyproject.toml
scripts/restore-data/: pyproject.toml  restore.py  test_restore.py
(+1268 files in other folders)
