[project]
name = "agentcore-restore-data"
version = "1.0.0"
description = "Restore tool for AgentCore Public Stack — reads a backup manifest and imports data into a deployed two-stack environment"
requires-python = ">=3.13"
dependencies = [
    "boto3==1.43.9",
    "botocore==1.43.9",
]

[dependency-groups]
dev = [
    "moto[dynamodb,s3,cognitoidp,ssm]==5.1.4",
    "pytest==8.4.2",
]

[tool.uv]
package = false
